<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="5dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <ImageView
            android:id="@+id/fanhui"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_centerVertical="true"
            android:src="@drawable/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="设置"
            android:textSize="28sp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/fanhui"
            />
    </RelativeLayout>
        <RadioButton
            android:id="@+id/pwdupdate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:button="@null"
            android:text="@string/updatepwd"
            android:drawableRight="@drawable/rightj"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:button="@null"
            android:text="@string/theaddress"
            android:drawableRight="@drawable/rightj"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:button="@null"
            android:text="@string/about"
            android:drawableRight="@drawable/rightj"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:button="@null"
            android:text="@string/costpwd"
            android:drawableRight="@drawable/rightj"
            android:textSize="20sp"/>
    </LinearLayout>
    <Button
            android:id="@+id/exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="退出当前账号"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/btn_shap"
            />
</RelativeLayout>
