<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include layout="@layout/toolbar_dark"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/me_backgroud"
            android:layout_weight="2">
            <include layout="@layout/header"/>
            <RelativeLayout
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="200dp">
                <TextView
                    android:id="@+id/tv_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="我的"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"/>

                <ImageView
                    android:id="@+id/me_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/me_setting"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting"
                    android:id="@+id/setting"
                    android:textSize="15dp"
                    android:layout_marginRight="20dp"
                    android:layout_toRightOf="@+id/me_setting"
                    android:textColor="#000000"
                    android:layout_marginTop="10dp"/>

                <com.makeramen.roundedimageview.RoundedImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:src="@drawable/pe"
                    android:id="@+id/head"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="25dp"
                    app:riv_corner_radius="1dip"
                    app:riv_border_width="1dip"
                    app:riv_border_color="#333333"
                    app:riv_mutate_background="true"
                    app:riv_tile_mode="repeat"
                    app:riv_oval="true"
                    android:scaleType="fitXY"/>
                <TextView
                    android:id="@+id/txt_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/head"
                    android:layout_marginLeft="20dp"
                    android:textColor="#000000"
                    android:textSize="18sp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/right"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:id="@+id/radio_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:button="@null"
                    android:drawableTop="@drawable/all"
                    android:text="全部订单"
                    android:layout_weight="1"
                    />
                <RadioButton
                    android:id="@+id/radio_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:button="@null"
                    android:drawableTop="@drawable/pay1"
                    android:text="待付款"
                    android:layout_weight="1"
                    />

                <RadioButton
                    android:id="@+id/radio_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:button="@null"
                    android:drawableTop="@drawable/send1"
                    android:text="待发货"
                    android:layout_weight="1"
                    />
                <RadioButton
                    android:id="@+id/radio_recevive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:button="@null"
                    android:drawableTop="@drawable/recevive"
                    android:text="待收货"
                    android:layout_weight="1"
                    />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_weight="6">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <ImageView
                    android:id="@+id/img_me"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/per"/>
                <TextView
                    android:id="@+id/per_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal"
                    android:layout_toRightOf="@id/img_me"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/right"
                    android:layout_gravity="center"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                >
                <ImageView
                    android:id="@+id/img_collect"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/collection"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/collection"
                    android:layout_toRightOf="@+id/img_collect"
                    android:paddingLeft="10dp"
                    android:id="@+id/collect"
                    android:textSize="18dp"
                    android:layout_centerVertical="true"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/right"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                >
                <ImageView
                    android:id="@+id/img_dynamic"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/dynamic"/>
                <TextView
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:text="发布动态"
                    android:paddingLeft="10dp"
                    android:id="@+id/insertdy"
                    android:textSize="18dp"
                    android:layout_toRightOf="@+id/img_dynamic"
                    android:layout_centerVertical="true"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/right"
                    android:layout_gravity="center"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>




</LinearLayout>
